# Evoo

./: Dockerfile  PITCH.md  README.md  environments.yaml  manifest.yaml  pyproject.toml  run_evoo_standalone.py
chart/evoo/: Chart.yaml  values.qa.yaml  values.yaml
chart/evoo/charts/: service-1.57.0.tgz
chart/evoo/charts/service/: .helmignore  Chart.yaml  values.schema.json  values.yaml
chart/evoo/charts/service/templates/: AuthorizationPolicy.yaml  NOTES.txt  deployment.yaml  destination-rule.yaml  envoyfilter-global-rate-limiting.yaml  envoyfilter.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  rollouts.yaml  vpa.yaml  (+6 more)
chart/evoo/charts/temporal-worker/: Chart.yaml  README.md  values.yaml
project/: __init__.py  acp.py  constants.py  run_worker.py  workflow.py
project/activities/: __init__.py  analysis_tools.py  evaluation_tools.py  llm_helpers.py  memory_activities.py  planning_tools.py  remediation_activities.py  remediation_tools.py  reward_activities.py  simulation_activities.py  simulation_tools.py  sre_agent_loop.py  strategy_activities.py
project/guardrails/: __init__.py  safety_rules.py
project/memory/: __init__.py  experience_store.py
project/models/: __init__.py  enums.py  experience.py  incident.py  incidents.py  strategies.py
project/simulation/: __init__.py  production_system.py
project/state_machines/: __init__.py  evoo.py  evoo_agent.py
project/strategy/: __init__.py  strategy_catalog.py  strategy_manager.py
project/workflows/: __init__.py  terminal_states.py
project/workflows/detection/: __init__.py  detecting_incident_workflow.py
project/workflows/evaluation/: __init__.py  evaluating_outcome.py  evaluation_workflow.py
project/workflows/execution/: __init__.py  executing_remediation.py  execution_workflow.py
project/workflows/idle/: __init__.py  idle_workflow.py  waiting_for_incident.py
project/workflows/learning/: __init__.py  learning_workflow.py  updating_strategy.py
project/workflows/planning/: __init__.py  planning_remediation.py  planning_workflow.py
(+15 files in other folders)
