[project]
name = "evoo-agent"
version = "1.0.0"
description = "EVOO — Evolutionary Operations Optimizer: An autonomous AI SRE agent that learns optimal incident remediation strategies through reward-based feedback loops"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk>=0.6.5",
    "temporalio>=1.18.2",
    "openai-agents>=0.4.2",     # OpenAI Agents SDK for planning and evaluation
    "litellm>=1.30.0",
    "openai>=1.0.0",             # OpenAI SDK ADK for LLM judge
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
